fix: image and text colliding on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -125,6 +125,7 @@ quote {
 
 .recommendation {
   margin-bottom: 1rem;
+  /* min-width: 495px; */
 }
 
 .recommendation__header {
@@ -143,7 +144,7 @@ quote {
 }
 
 .recommendation__img {
-  min-width: 250px;
+  min-width: 100%;
   max-width: 33.33%;
   object-fit: scale-down;
   margin-right: 1rem;
